--- a/workspace/app/frontend/.devcontainer/Dockerfile
+++ b/workspace/app/frontend/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-slim
 
 # Install basic development tools
-RUN apt update && apt install -y less man-db sudo
+RUN apt update && apt install -y procps less man-db sudo
 
 # Ensure default `node` user has access to `sudo`
 ARG USERNAME=node
