--- a/workspace/app/frontend/package.json
+++ b/workspace/app/frontend/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.5",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
